<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.torch2424.feather.MainActivity" >
    
     <item
        android:id="@+id/shuffle"
        android:orderInCategory="100"
        android:title="@string/shuffle"/>
     
      <item
        android:id="@+id/loop"
        android:orderInCategory="200"
        android:title="@string/loop"/>
    
    <item
        android:id="@+id/playlistActivity"
        android:orderInCategory="300"
        android:title="@string/menuPlaylist"/>

    <item
        android:id="@+id/settings"
        android:orderInCategory="400"
        android:title="@string/settings"/>
    
    <item
        android:id="@+id/quit"
        android:orderInCategory="500"
        android:title="@string/quit"/>
        

</menu>
